--- a/src/latihanKu/dashboardPanel.form
+++ b/src/latihanKu/dashboardPanel.form
@@ -270,7 +270,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="SELAMAT DATANG,"/>
+        <Property name="text" type="java.lang.String" value="SELAMAT DATANG"/>
       </Properties>
     </Component>
   </SubComponents>
